mdx file with another footnote + docs folder

--- a/app/docs/rulebook.mdx
+++ b/app/docs/rulebook.mdx
@@ -11,21 +11,23 @@ summary:
 
 - **_a n i m e_**
 - world of varied humans with features of common animals, fantasy, and myth (kemonomimi, cat girls, fox boys, demons, dragons, elves, and everything in between)
-- at birth, you're born with an attunement to one or more elements of nature, or **aspects**, which you can bend to your will through **aspect art** (think Avatar: The Last Airbender)
+- at birth, you're born with an attunement to one or more elements of nature, or **aspects**, which you can bend to your will through **aspect art**[^aspect-art-parallel]
 - tech level: pre-industrial revolution - aspect art replaces much of what modern tech would accomplish
 - lore: crystals
   - gemstones created through metamorphic earth processes
   - posses the ability to store and repeat aspect arts depending on the quality of the crystal
 
+[^aspect-art-parallel]: You can think of aspects and aspect art similarly to the elements and bending in Avatar: The Last Airbender.
+
 ## Game Flow
 
 Players should first create their characters, assigning attributes, aspects, and traits that suit them.
 
-The narrator[^1] should prepare a scenario for the players to play through, whether it’s a single-session one-shot, or a campaign spanning over dozens of sessions. Sessions can last anywhere around 1 to 3 hours, depending on the energy levels, attention span, and/or available time for those playing.
+The narrator[^narrator] should prepare a scenario for the players to play through, whether it’s a single-session one-shot, or a campaign spanning over dozens of sessions. Sessions can last anywhere around 1 to 3 hours, depending on the energy levels, attention span, and/or available time for those playing.
 
 The game starts and runs as a back-and-forth between players and the narrator.
 
-[^1]: In other systems, this is called the game master or dungeon master
+[^narrator]: In other systems, this is called the game master or dungeon master
 
 ### Players
 
