--- a/app/docs/rulebook.mdx
+++ b/app/docs/rulebook.mdx
@@ -1,23 +1,4 @@
-# Aspects of Nature
-
-summary:
-
-- story & roleplay focused
-- rules lite
-- easy math
-- flexible character builder based around several elements that link to one another
-
-## Theme & Setting
-
-- **_a n i m e_**
-- world of varied humans with features of common animals, fantasy, and myth (kemonomimi, cat girls, fox boys, demons, dragons, elves, and everything in between)
-- at birth, you're born with an attunement to one or more elements of nature, or **aspects**, which you can bend to your will through **aspect art**[^aspect-art-parallel]
-- tech level: pre-industrial revolution - aspect art replaces much of what modern tech would accomplish
-- lore: crystals
-  - gemstones created through metamorphic earth processes
-  - posses the ability to store and repeat aspect arts depending on the quality of the crystal
-
-[^aspect-art-parallel]: You can think of aspects and aspect art similarly to the elements and bending in Avatar: The Last Airbender.
+Aspects of Nature is a story-focused, rules-lite tabletop roleplaying game. Set in a world populated by several varieties of humanoid races, all are born with the ability to manipulate one or more elements of nature, or **Aspects**, to their will.
 
 ## Game Flow
 
