--- a/app/docs/rulebook.mdx
+++ b/app/docs/rulebook.mdx
@@ -1,3 +1,5 @@
+import { AttributeList, AspectList, TraitList } from "./data.tsx"
+
 Aspects of Nature is a story-focused, rules-lite tabletop roleplaying game. Set in a world populated by several varieties of humanoid races, all are born with the ability to manipulate one or more elements of nature, or **Aspects**, to their will.
 
 ## Game Flow
@@ -61,11 +63,7 @@ Other values:
 
 Characters have a number in each attribute from 1 to 6, all adding to 18
 
-- Intellect: breadth of knowledge and how to apply it
-- Sense: strength of mind, ability to focus and perceive
-- Agility: nimbleness, adaptability, swiftness, acrobatic ability
-- Strength: physical prowess, strength of body
-- Wit: social skills, insight, manipulation, stealth, slight of hand
+<AttributeList />
 
 ## Traits
 
@@ -80,65 +78,7 @@ For example, let's say you give your character a long tail. This means that all 
 
 The traits can come in whatever form you choose. For example, a tail could be long and thick like a lizard’s, or thin with a spaded tip like a devil's. You can add any number of additional traits beyond the first three for narrative flavor, even ones from this list, while specifying the ones that apply their attribute buffs.
 
-Long Tail
-
-- Sense: an additional appendage for sensory information
-- Agility: helps with balance and quick direction changes
-- Wind
-
-Fins
-
-- Agility: streamlined movement
-- Sense: sensitive to water pressure and movement
-- Water
-
-Wings
-
-- Agility: aerial maneuverability
-- Intellect: complex navigation and wind reading
-- Wind
-
-Horns/antlers
-
-- Strength: natural weapons and structural strength
-- Sense: enhanced spatial awareness of head space/clearance
-- Light
-
-Antennas
-
-- Intellect: process complex sensory information
-- Sense: detect subtle environmental changes
-- Darkness
-
-Furred ears
-
-- Sense: enhanced hearing from the fur's sensitivity
-- Wit: expressive movement for social cues
-- Light
-
-Sharp teeth/fangs
-
-- Strength: natural weapons
-- Wit: intimidation factor in social situations, but a draw for some
-- Fire
-
-Bioluminescence
-
-- Intellect: control over complex biological processes
-- Wit: can make one’s appearance more charming or intimidating
-- Darkness
-
-Scales
-
-- Strength: natural armor
-- Intellect: enhanced temperature regulation/awareness
-- Water
-
-Claws
-
-- Strength: acts as a weapon of its own
-- Wit: intimidating display/social presence
-- Fire
+<TraitList />
 
 ## Hits & Toughness
 
@@ -203,46 +143,6 @@ Proficient skills:
 
 > **Tip:** Narrators should aim to make failures interesting. For example, consider a character tries to **Spy** for something they lost. On failure, instead of having nothing happen, maybe they find something that a friend lost instead!
 
-Strength
-
-- Strike - attack with melee weapons or bare hands
-- Block - defend against physical attacks with your body or shield
-- Throw - hurl objects or people with force
-- Lift - carry heavy objects or move obstacles
-- Endure - resist physical strain, exhaustion, or harsh conditions
-
-Intellect
-
-- Intuit - understand complex concepts or make logical deductions
-- Recall - remember facts, details, or past experiences
-- Aid - provide medical treatment or assistance
-- Operate - use complex tools or machinery
-- Tinker - repair, modify, or craft items
-
-Agility
-
-- Dash - move quickly in bursts or sprint
-- Jump - leap across gaps or over obstacles
-- Climb - scale walls, trees, or other vertical surfaces
-- Dodge - avoid incoming attacks or hazards
-- Maneuver - perform acrobatic movements or maintain balance
-
-Wit
-
-- Charm - persuade or influence others positively
-- Intimidate - threaten or pressure others through fear
-- Deceive - lie convincingly or misdirect
-- Read - understand others' emotions and intentions
-- Sneak - move quietly and remain undetected
-
-Sense
-
-- Spy - spot hidden details or distant objects
-- Listen - detect and identify sounds
-- Feel - notice changes in temperature, pressure, or vibrations
-- Shoot - attack accurately with ranged weapons
-- Focus - maintain concentration or resist distractions
-
 ## Aspects
 
 - Aspect art checks: same as skill checks, but with a d12 (power/risk dice are still d6)
@@ -267,53 +167,7 @@ Sense
   - Darkness: send a shiver down someone’s spine
 - For each action below, must succeed an aspect check for the primary effect to apply, otherwise the failure case applies
 
-Light
-
-- vibe: justice, order, knowledge
-- attribute: intellect
-- action: restore - heal 2 hits; on failure, 1 hit
-- action: peacekeeper - a chosen target may not deal more than 1 hit until your next action; on failure, 2 hits
-- action: multicast - add 2 additional targets to your next action; on failure, 1 additional target
-- action: sacrifice - try to remove any 2 hits, then take 1 hit; on failure, remove any 1 hit
-- action: inspire - add 2 power dice to a target's next roll; on failure, add 1 power die
-- action: message - send a message across any distance to someone you have met; on failure, the message must be under Wit words
-- action: command - force another character to make a specific action; on failure, requires an additional Wit skill check (whichever is most appropriate)
-  - this might be too powerful; I don't know how to balance this, so I won't
-
-Water
-
-- vibe: tranquility, focus, awareness
-- attribute: sense
-- action: shield - a target may not take more than 1 damage until your next action; on failure, 2 damage
-- action: protect - choose two targets. until your next action, if either of them take hits this round, prevent it, and take a hit; on failure, choose one target
-- action: castle - prevent all allies' hits until your next action, you must skip your next action; on failure, you must skip your next 2 actions
-- action: foresight - reveal any action, then you may take 1 additional fatigue (once) to let another target character change their action; on failure, you may not allow a character to change their action
-
-Wind
-
-- vibe: swiftness, dexterity, adaptability
-- attribute: agility
-- action: evade - prevent all hits on self this round; on failure, prevent hits up to your Agility
-- action: adapt - immediately make another action with two of your attributes swapped; on failure, make your next action with two attributes swapped (not immediate)
-- action: cyclone - deal a ranged hit to 2 random enemies or 5 random characters; on failure, you must choose 5 random characters
-- action: surge - apply your next action three times; on failure, two times
-
-Fire
-
-- vibe: power, destruction, force
-- attribute: strength
-- action: flame strike - deal 3 hits to one target; on failure, 2 hits
-- action: flame arc - deal 1 hit to 3 targets; on failure, 2 targets
-- action: inferno - your next action deals triple the hits; on failure, double the hits
-
-Darkness
-
-- vibe: manipulation, leverage, stealth
-- attribute: wit
-- action: weaken - add 2 risk dice to a target's next roll; on failure, add 1 risk die
-- action: drain - try to remove any 2 hits, then deal any 2 hits; on failure, remove 1, deal 1
-- action: cancel - prevent a target's next action; on failure, the target is random
-- action: disappear - turn invisible, you cannot take hits until your next action; on failure, you must succeed an Agility check to prevent any hit
+<AspectList />
 
 ## Combat
 
