print styling + pdf rulebook

--- a/app/routes/_guide+/rulebook/_index.mdx
+++ b/app/routes/_guide+/rulebook/_index.mdx
@@ -1,5 +1,10 @@
 import { AttributeList, AspectList, TraitList } from "./data.tsx"
 
+export const title = "Aspects of Nature - Rulebook"
+export const meta = () => [{ title }]
+
+# {title}
+
 Aspects of Nature is a story-focused, rules-lite tabletop roleplaying game. Set in a world populated by several varieties of humanoid races, all are born with the ability to manipulate one or more elements of nature, or **Aspects**, to their will.
 
 ## Game Flow
