--- a/app/routes/_guide+/lore/_index.mdx
+++ b/app/routes/_guide+/lore/_index.mdx
@@ -1,3 +1,8 @@
+export const title = "Aspects of Nature - Lore"
+export const meta = () => [{ title }]
+
+# {title}
+
 - **_a n i m e_**
 - world of varied humans with features of common animals, fantasy, and myth (kemonomimi, cat girls, fox boys, demons, dragons, elves, and everything in between)
 - at birth, you're born with an attunement to one or more elements of nature, or **aspects**, which you can bend to your will through **aspect art**[^aspect-art-parallel]
