--- a/app/routes/_guide+/lore/_index.mdx
+++ b/app/routes/_guide+/lore/_index.mdx
@@ -1,7 +1,6 @@
-export const title = "Aspects of Nature - Lore"
-export const meta = () => [{ title }]
-
-# {title}
+export const handle = {
+	title: "World Lore",
+}
 
 - **_a n i m e_**
 - world of varied humans with features of common animals, fantasy, and myth (kemonomimi, cat girls, fox boys, demons, dragons, elves, and everything in between)
