--- a/app/routes/_guide+/rulebook/_index.mdx
+++ b/app/routes/_guide+/rulebook/_index.mdx
@@ -1,9 +1,8 @@
 import { AttributeList, AspectList, TraitList } from "./data.tsx"
 
-export const title = "Aspects of Nature - Rulebook"
-export const meta = () => [{ title }]
-
-# {title}
+export const handle = {
+	title: "Rulebook",
+}
 
 Aspects of Nature is a story-focused, rules-lite tabletop roleplaying game. Set in a world populated by several varieties of humanoid races, all are born with the ability to manipulate one or more elements of nature, or **Aspects**, to their will.
 
