📝 first finished guide draft

--- a/app/routes/_guide+/lore/_index.mdx
+++ b/app/routes/_guide+/lore/_index.mdx
@@ -12,4 +12,16 @@ export const handle = {
 
 > work in progress
 
+## Aspect Auras
+
+Aspects each have their own **aura**, determined by their placement on two axes:
+
+- **Order and chaos.** At the ends of the axis, light and darkness are both methodical and decisive, whereas wind is playful, unpredictable, and free. Water and fire both sit in between.
+
+- **Traditionalism and adaptability.** On one end, light is honorable, trustworthy, and reliable, but rigid and inflexible. On the other hand, darkness is flexible and adaptable, but unpredictable and reckless.
+
+  Water tends to lean towards tradition, with a conservative amount of fluidity to adapt when necessary. Fire is powerful and unflinching, but wild and untamed, without a sense of stability and direction.
+
+  Wind constantly moves one way or the other on the spectrum, always in motion, able to guide towards an end, or throw intention to the wind and let nature decide its whims.
+
 [^aspect-art-parallel]: You can think of aspects and aspect art similarly to the elements and bending in Avatar: The Last Airbender.
