--- a/app/routes/_guide+/rulebook/_index.mdx
+++ b/app/routes/_guide+/rulebook/_index.mdx
@@ -289,7 +289,7 @@ Looking at the attributes and aspect for each trait, you would gain the followin
 
 Additionally, you can pick 6 proficient skills: one for each of your trait's attributes.
 
-In this case, your combination of tratits let you pick one proficiency in every attribute, except for Agility, which gives you _2 proficiencies_, due to the overlap from your wings and tail!
+In this case, your combination of traits let you pick one proficiency in every attribute, except for Agility, which gives you _2 proficiencies_, due to the overlap from your wings and tail!
 
 In Intellect, you decide to pick Operate. This gives you an additional power die for that skill, _on top of_ the one from your wings. These are your final Intellect skill bonuses:
 
