--- a/app/routes/_guide+/rulebook/_index.mdx
+++ b/app/routes/_guide+/rulebook/_index.mdx
@@ -62,6 +62,12 @@ Alternatively, you can get out some paper, or open your favorite text editor. Th
 1. For each [attribute](#attributes) choose a value from 1 to 6. They should add up to 18.
 1. For each [aspect](#aspects), choose a value from 0 to 6. They should add up to 6.
 1. Pick three [traits](#traits). While picking traits, keep a tally of power dice added to your attributes and aspects.
+1. Pick proficient skills based on your traits.
+1. Hits, starting at 0
+1. Toughness, equal to your Strength + Agility
+1. Fatigue, starting at 0
+1. Resolve, equal to your Intellect + Sense + Wit
+1. Comeback points, starting at 0
 
 And you're done!
 
