fix and simplify page meta

--- a/app/routes/_guide+/lore/_index.mdx
+++ b/app/routes/_guide+/lore/_index.mdx
@@ -1,6 +1,9 @@
-export const handle = {
-	title: "World Lore",
-}
+import { getPageMeta } from "../../../meta.ts"
+
+export const title = "World Lore"
+export const meta = getPageMeta(title)
+
+# {title}
 
 - **_a n i m e_**
 - world of varied humans with features of common animals, fantasy, and myth (kemonomimi, cat girls, fox boys, demons, dragons, elves, and everything in between)
