--- a/app/routes/_guide+/rulebook/_index.mdx
+++ b/app/routes/_guide+/rulebook/_index.mdx
@@ -1,10 +1,12 @@
 import { Link } from "react-router"
+import { getPageMeta } from "../../../meta.ts"
 import { Callout } from "../Callout.tsx"
 import { AspectList, AttributeList, TraitList } from "./data.tsx"
 
-export const handle = {
-	title: "Rulebook",
-}
+export const title = "Rulebook"
+export const meta = getPageMeta(title)
+
+# {title}
 
 Aspects of Nature is a story-focused, rules-lite tabletop roleplaying game. Set in a world populated by several varieties of humanoid races, all are born with the ability to manipulate one or more elements of nature, or **Aspects**, to their will.
 
